# movie-streamlit

./: README.md  app.py  pyproject.toml
