[project]
name = "movie-streamlit"
version = "0.1.0"
description = "deploy movie-streamlit"
authors = [
    {name = "jacob-53", email = "jacob8753@gmail.com"},
]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
