[project]
name = "movie-streamlit"
version = "0.1.0"
description = "deploy movie-streamlit"
authors = [
    {name = "jacob-53", email = "jacob8753@gmail.com"},
]
dependencies = ["streamlit>=1.43.2", "matplotlib>=3.10.1", "pandas>=2.2.3", "pyarrow>=19.0.1", "altair>=5.5.0"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[dependency-groups]
dev = [
    "jupyterlab>=4.3.6",
]
